fix spacing

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ video {
     flex-direction: column;
     align-items: center;
     opacity: 0; /* Start hidden */
+    margin-top: -5vh;
     padding: 8px;
 }
 .glow-on-hover {
